# dmmd-py

./: README.md  pyproject.toml  testing.py
dmmd/: __init__.py  client.py  exceptions.py
dmmd/data/: __init__.py  _typing.py
dmmd/icdn/: __init__.py  __main__.py  _typing.py
dmmd/icdn/cli/: __main__.py  parameters.py
dmmd/static/: __init__.py
