[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "dmmd/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["dmmd"]

[project]
name = "dmmd-py"
dynamic = ["version"]
description = "Python module for interacting with DmmD's APIs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp[speedups]>=3.11.17",
    "asyncclick>=8.1.8",
    "humanize>=4.12.2",
    "pydantic>=2.11.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
icdn = "dmmd.icdn.__main__:icdn"

# Including URLs although this is not being uploaded
# to PyPI, at least not yet anyway.
[project.urls]
Homepage = "https://github.com/iiPythonx/dmmd-py"
Issues = "https://github.com/iiPythonx/dmmd-py/issues"
